--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,186 @@
 
+* {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 body {
   background: -webkit-linear-gradient(left, rgb(113, 170, 255) 10%, rgb(125, 177, 255) 20%, rgb(141, 186, 253) 47%, rgb(137, 184, 255) 100%);
+}
+
+
+.mainContent {
+  width: 100%;
+  height: 100%;
+  margin-top: 50px;
+}
+
+.header {
+  font-size: 38px;
+  color: rgb(255, 255, 255);
+  margin-top: -50px;
+  background-color: #D4870C;
+  padding-bottom: 20px;
+  padding-top: 10px;
+  border-radius: 0 0 20px 20px;
+}
+
+.club {
+  background-color: #D4870C;
+  width: fit-content;
+  font-size: 27px;
+  font-weight: bold;
+  color: white;
+}
+
+.mainText{
+  font-size: 7.7em;
+  margin-top: 20px;
+  color: white;
+  background-color: #D4870C;
+  padding: 40px 50px;
+  border-radius: 25px;
+  width: 40%;
+} 
+
+.button {
+  margin-top: 1.8em;
+}
+
+.btnMin {
+  font-size: 1.4rem;
+  top: 20vh;
+  border-radius: 16px;
+  color: white;
+  cursor: pointer;
+}
+
+.btnPlus {
+  font-size: 1.4rem;
+  top: 20vh;
+  margin-left: 25px;
+  border-radius: 16px;
+  color: white;
+  cursor: pointer;
+}
+
+
+@media (max-width:768px) {
+  
+  .mainContent {
+    width: 100%;
+    height: 100%;
+    margin-top: 50px;
+  }
+
+  .header {
+    font-size: 27px;
+    color: rgb(255, 255, 255);
+    margin-top: -50px;
+    background-color: #D4870C;
+    padding-bottom: 20px;
+    padding-top: 10px;
+    border-radius: 0 0 20px 20px;
+  }
+
+  .club {
+    background-color: #D4870C;
+    width: fit-content;
+    font-size: 23px;
+    font-weight: bold;
+    color: white;
+  }
+
+  .mainText{
+    font-size: 5.7em;
+    margin-top: 20px;
+    color: white;
+    background-color: #D4870C;
+    padding: 40px 50px;
+    border-radius: 25px;
+    width: 70%;
+  } 
+
+  .button {
+    margin-top: 30px;
+  }
+
+  .btnMin {
+    font-size: 1.5rem;
+    top: 20vh;
+    border-radius: 16px;
+    color: white;
+    cursor: pointer;
+    margin-right: 18px;
+  }
+
+  .btnPlus {
+    font-size: 1.5rem;
+    top: 20vh;
+    margin-left: 1px;
+    border-radius: 16px;
+    color: white;
+    cursor: pointer;
+  }
+
+}
+
+
+@media (max-width:450px) {
+  
+  .mainContent {
+    width: 100%;
+    height: 100%;
+    margin-top: 50px;
+  }
+
+  .header {
+    font-size: 27px;
+    color: rgb(255, 255, 255);
+    margin-top: -50px;
+    background-color: #D4870C;
+    padding-bottom: 20px;
+    padding-top: 10px;
+    border-radius: 0 0 20px 20px;
+  }
+
+  .club {
+    background-color: #D4870C;
+    width: fit-content;
+    font-size: 23px;
+    font-weight: bold;
+    color: white;
+  }
+
+  .mainText{
+    font-size: 5.7em;
+    margin-top: 20px;
+    color: white;
+    background-color: #D4870C;
+    padding: 40px 50px;
+    border-radius: 25px;
+    width: 90%;
+  } 
+
+  .button {
+    margin-top: 30px;
+  }
+
+  .btnMin {
+    font-size: 1.3rem;
+    top: 20vh;
+    border-radius: 16px;
+    margin-right: 0;
+    color: white;
+    cursor: pointer;
+    margin-bottom: 18px;
+  }
+
+  .btnPlus {
+    font-size: 1.3rem;
+    top: 20vh;
+    border-radius: 16px;
+    color: white;
+    cursor: pointer;
+  }
+
 }
